feat: add endpoint on getting blog topics' data.
